--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
+<!--
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>almost blank</h1>
+
+</body>
+</html>
+-->
+
+
+<!DOCTYPE html>
 <html>
   <head>
-  <title>Git Test</test>
+  <title>Git Test</title>
   </head>
 
 <body>
- ! Yikes, another change !
+ <h1>! Yikes, a change !</h1>
+ <h2>!What, another one?</h2>
 </body>
 
 </html>
