Hmm... looks like messages are NOT optional!

--- a/index.html
+++ b/index.html
@@ -1,15 +1,3 @@
-<!--
-<!DOCTYPE html>
-<html>
-<body>
-
-<h1>almost blank</h1>
-
-</body>
-</html>
--->
-
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -18,7 +6,7 @@
 
 <body>
  <h1>! Yikes, a change !</h1>
- <h2>!What, another one?</h2>
+ <h2>!What, another one???</h2>
 </body>
 
 </html>
